--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,6 @@
 # This .gitignore file was automatically created by Microsoft(R) Visual Studio.
 ################################################################################
 
-/.vs/TestSolution
-/bin/Debug/netcoreapp3.1
-/obj/Debug/netcoreapp3.1
+/.vs/
+/bin/
 /obj
